force-app/main/default/objects/object120__c/object120__c.object-meta.xml
<CustomObject>
    <label>Object120</label>
    <nameField>
        <label>NameField</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objects120</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>