force-app/main/default/objects/object120__c/fields/testfield136__c.field-meta.xml
<CustomField>
    <fullName>testfield136__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Test</description>
    <label>testfield136</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>object120_testfield136s</relationshipLabel>
    <relationshipName>object120_testfield136s</relationshipName>
    <type>Lookup</type>
</CustomField>