force-app/main/default/objects/object120__c/fields/testfield36__c.field-meta.xml
<CustomField>
    <fullName>testfield36__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Test</description>
    <label>testfield36</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>object120_testfield36s</relationshipLabel>
    <relationshipName>object120_testfield36s</relationshipName>
    <type>Lookup</type>
</CustomField>